Prevent horizontal scrollbar from appearing during sidebar hiding animation

--- a/src/main/resources/static/css/simple-sidebar.css
+++ b/src/main/resources/static/css/simple-sidebar.css
@@ -26,6 +26,7 @@
     height: 100%;
     margin-left: -250px;
     overflow-y: auto;
+    overflow-x: hidden;
     background: #000;
     -webkit-transition: all 0.5s ease;
     -moz-transition: all 0.5s ease;
